docs: define parameter deviceType
